--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
  .nav-container {
  	display:flex;
  	justify-content: center;
+ 	padding-right: 5vw;
+ 	padding-left: 5vw;
  }
  .nav-sections {
     color:rgba(255, 255, 255, .76);
@@ -434,7 +436,7 @@ section{
 
 <section class="homepage">
 	<img src="sailing.jpg" style="visibility: hidden">
-	<div class="name"> Ansgar Jordan <br>
+	<div class="name"> Ansgar F. Jordan <br>
 	   </div>
 	<div class="profession">
 	<!--	{ Data Science Engineer }; -->
@@ -456,7 +458,7 @@ section{
 	<div class="heading"> About Me </div>
 	<div class="myinfo" id="computer">
 		<img src="me.png" id="me">	<br>
-		Hi! I'm Ansgar. <br> I'm a German-American from San Diego, California. 
+		Hello! I'm Ansgar. <br> I am a German-American from San Diego, California. 
 	</div>
 	<br>
 
@@ -468,14 +470,14 @@ section{
 
 <div class="interests" id="computer">
 		<img src="sailing2.jpg" id="sailpic"> <br>
-	I enjoy sailing, playing the piano, cooking and baking. This picture is of me sailing on Mystic Lake in Boston!
+	I enjoy sailing, skiing, running, soccer, playing the piano, cooking and baking. This picture is of me sailing on Mystic Lake in Boston!
 	</div>
 
 <!-- These divs get displayed if the window size too small -->
 	<div class="dummy">
 		<div class="myinfo" id="mobile">
 		<img src="me.png" id="me">	<br>
-		Hi! I'm Ansgar. <br> I'm a German-American from San Diego, California. 
+		Hello! I'm Ansgar. <br> I am German-American from San Diego, California. 
 	</div>
 	<br>
 		<div class="school" id="mobile">
@@ -486,7 +488,7 @@ section{
 		<br>
 	<div class="interests" id="mobile">
 		<img src="sailing2.jpg" id="sailpic"> <br>
-	I enjoy sailing, playing the piano, cooking and baking. This picture is of me sailing on Mystic Lake in Boston!
+	I enjoy sailing, skiing, running, soccer, playing the piano, cooking and baking. This picture is of me sailing on Mystic Lake in Boston!
 	</div>
 	<br>
 	</div>
@@ -522,8 +524,7 @@ section{
 			I have the most experience in C/C++, which I use for most major projects. I have intermediate experience writing queries in MySQL and small programs in Python. 
 			I use Javascript, HTML and CSS for web applications. 
 		</div>
-		<br> 
-	<br>
+		<br>
 	<div class="language-list">
 		<div class="language"> Microsoft Office </div>
 		<div class="language"> Excel </div>
@@ -531,11 +532,10 @@ section{
 		<div class="language"> Fluent in German </div>
 	</div>
 	<div class="language_info">
-		I have experience using Linux Shell (ssh/bash), including shell scripting, SFTP as well as using vim/emacs/nano text editors. I am proficient in Microsoft Office (Powerpoint, Word, Outlook) and intermediate experience using Excel.
+		I have experience using Linux Shell (ssh/bash), including shell scripting, SFTP as well as using vim/emacs/nano text editors. I am proficient in Microsoft Office (Powerpoint, Word, Outlook) and have intermediate experience using Excel.
 
-		I am also fluent in German, including reading and writing at a business communication level.  
+		I am also fluent in German, my second mother tongue. 
 	</div>
-	<br>
 	<br>
 	<div class="language-list" style="text-align: center; font-size:3vmin; padding-top: 2vh">
 		Work Experience
@@ -545,7 +545,7 @@ section{
 		Employer: Coronado Yacht Club/California Yacht Club <br>
 		Dates: June-August 2017-2019
 		<ul>
-			<li> Taught beginner, intermediate and advanced sailing courses for children ages 8-18 </li>
+			<li> Taught beginner, intermediate and advanced sailing courses for children/teenagers ages 8-18 </li>
 			<li> Demonstrated proper safety techniques in handling of sailboats and first aid</li>
 			<li> Dealt with parents concerns and kept them informed of child's performances </li>
 			<li> Promoted to Youth Race Team Coach based on experience and dependability, prepared team for National Championship</li>
