--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ section{
 		Concepts: Bitwise operations, machine arithmetic
 
 	  <h4> Description </h4>
-	    The purpose of this program was to 1) Understand machine arithmetic and 2) implement and image compressor and decompressor. This program used various different modules to work together to compress and image to 1/3 of its original size.  
+	    The purpose of this program was to 1) Understand machine arithmetic and 2) implement an image compressor and decompressor. This program used various different modules to work together to compress and image to 1/3 of its original size.  
 	     <br>
 	     We used Hanson Data Structures (from C Interfaces and Implementations, see <a href="https://sites.google.com/site/cinterfacesimplementations/" target="_blank"><u style="color:blue">HERE</u></a>) and the Pnmrdr Interface, used to represent pnm images (see <a href="https://www.cs.tufts.edu/comp/40/docs/pnmrdr.html" target="_blank"><u style="color:blue">HERE</u></a>)
 	     <h4> Program Components </h4>
