--- a/index.html
+++ b/index.html
@@ -8,408 +8,12 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<!--	<link rel="stylesheet" type="text/css" href="style.css"> -->
+	<link rel="stylesheet" type="text/css" href="style.css"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ansgar Jordan</title>
 </head>
-<style>
-		 * {
- 	font-family: Consolas;
- }
-/* Nav Sections */
- nav {
- 	position: fixed;
- 	text-align: center;
- 	bottom:0;
- 	left: 0;
- 	width: 100vw;
- 	height: 9vh;
- 	background-color: #3366cc;
- 	z-index: 1000;
- }
- .nav-container {
- 	display:flex;
- 	justify-content: center;
- 	padding-right: 5vw;
- 	padding-left: 5vw;
- }
- .nav-sections {
-    color:rgba(255, 255, 255, .76);
- 	margin: 0;
- 	padding-top: 2vh;
- 	padding-left: 2vw;
- 	padding-right: 2vw;
- 	padding-bottom: 2vh;
- 	font-size: 4vmin;
- }
- .nav-sections:hover{
- 	text-decoration: underline overline;
- }
-  a:visited{
- 	text-decoration: none;
- 	color:none;
- }
- a{
- 	color:rgba(255, 255, 255, .76);
- 	 text-decoration: none;
- }
-
-/* Nav Sections END */
-
-/* Sections - General */
- .heading{
- 	text-align: center;
- 	padding-left: 2vw;
- 	padding-right: 2vw;
- 	padding-bottom: 2vh;
- 	font-size: 5vmin;
- 	text-decoration: underline;
- 	text-decoration-color: #0066ff;
- }
-section{
- 	max-height:96vh;
- 	min-height: 96vh;
- 	min-width:100vw;
- 	margin: 0;
- 	padding:0;
- 	overflow: hidden;
- 	position:relative;
-
- }
- html, body{
-   margin: 0;
-   padding:0;
- }
- p{
- 	margin-left: 5vw;
-	margin-right: 5vw;
-	margin-top:2vh;
-	margin-bottom: 2vh;
-	width: 90vw;
- 	text-align: justify;
- 	font-size:4vmin;
-
- }
-/* End Sections: General */
 
 
- .name {
- 	text-align: center;
- 	display: block;
- 	margin:auto;
- 	color:white;
- 	position: absolute;
- 	top: 40vh;
- 	left:40vw;
-    transform: translate(-50%, -50%);
- 	font-size: 10vmin;
- 	/* background-color:rgba(255, 255, 255, .55); */
- 	font-family: Courier New;
- }
- .profession{
-
- 	text-align: center;
- 	display: block;
- 	margin:auto;
- 	position: absolute;
- 	top: 55vh;
- 	left:40vw;
-    transform: translate(-50%, -50%);
- 	font-size: 7vmin;
- 	/* background-color:rgba(255, 255, 255, .55); */
- 	font-family: Courier New;
- }
- /* Section 1 */
- .homepage {
-
- 	background: 
-    linear-gradient(
-      rgba(186, 186, 186, 0.90), 
-      rgba(0, 15, 71, 0.90)
-    ),
-    center center fixed,
-    /* bottom, image */
-    url(sailing.jpg);
-
- 	background-size: auto 100%;
- 	background-repeat: no-repeat;
- 	-webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
- 
- }
- /* END Section 1 */
-
- /* Color Bar */
-  .color-bar{
-  	display:flex;
- 	text-align: center;
- 	width: 100vw;
- 	height: 4vh;
- }
- .color-section{
- 	width: 10vw;
- 	height: 4vh;
- 	opacity: .6;
- }
-/* END Color bar */
-
-/* Begin Courses */
-.course-list {
-	box-shadow: 1vw 1vh rgba(0, 0, 0, .7);
-}
-#comp-sci{
-	top: 8vh;
-	left:0vw;
-	width: 40vw;
-	height: 22vh;
-	border: .2vmin solid black;
-	margin: 5vmin;
-	padding-left: 2vw;
- 	padding-right: 2vw;
- 	padding-bottom: 4vh;
- 	font-size:2.5vmin;
- 	position: absolute;
-
-}
-#mathematics{
-	position: absolute;
-	top: 8vh;
-	right:0vw;
-	width: 40vw;
-	height: 22vh;
-	border: .2vmin solid black;
-	margin: 5vmin;
-    padding-left: 2vw;
- 	padding-right: 2vw;
- 	padding-bottom: 4vh;
- 	font-size:2.5vmin;
-
-	
-}
-#other{
-	width: 40vw;
-	position: absolute;
-	bottom: 17vh;
-	height: 22vh;
-	border: .2vmin solid black;
-	 margin: 5vmin; 
-	/* left: 30vw; */
-	padding-left: 2vw;
- 	padding-right: 2vw;
- 	padding-bottom: 4vh;
-    font-size:2.5vmin;
-}
-/* End Courses */
-
-/* Begin Languages */
-.experience{
-	max-height:unset;
-}
-.language-list{
-    margin-left: auto;
-	margin-right: auto; 
-/* 	margin-top:2vh;
-	margin-bottom: 2vh; */
-	padding-left: 2vw;
-	padding-right: 2vw;
-	padding-bottom:2vh;
-	width: 90vw;
-	border-left: .2vmin solid black;
-	border-right: .2vmin solid black;
-	box-shadow: 0vw -1vh rgba(0, 0, 0, .5);
-	display:flex;
-	justify-content: center;
-	/* padding: 2vmin; */
-	font-weight:bold;
-
-}
-.language {
-	font-size: 3vmin;
- 	margin-left: 3.2vw;
-	margin-right: 3.2vw; 
-    margin-top:3vh; 
-    font-weight:bold;
-   /* margin-bottom: 3vh; */
-
-}
-.language_info 
-{
-	width: 90vw;
- 	text-align: justify;
- 	font-size:3.5vmin;
-	margin-left:auto;
-	margin-right:auto;
-	margin-bottom: 2vh; 
-	padding-left: 2vw;
-	padding-right: 2vw;
-	padding-top: 2vh;
-	padding-bottom: 2vh;
-	width: 90vw;
-	border-left: .2vmin solid black;
-	border-right: .2vmin solid black;
-	border-top: .2vmin dotted grey; 
-	box-shadow: 0vw 1vh rgba(0, 0, 0, .5);
-}
-.backtop {
-	color: rgba(0,0,0,.4);
-	justify-content: center;
-	text-align: center;
-	text-decoration: underline;
-	bottom:1vh;
-	position: absolute;
-	width: 8vw;
-	height: 2vh;
-	left: 46vw;
-	font-size: 2vmin;
-
-}
-/* End Languages */
-
-/* Begin Projects Section */
-
-.projectheader {
-	display:flex;
-	justify-content: center;
- 	text-align: center;
- 	width: 100vw;
- 	height: 8.5vh;
- 	border: .2vmin inset black;
- 	border-bottom: none;
-}
-.projecttitle{
-	height:7vh;
-	width:30vw;
-	padding-left: 2vw;
-	padding-right: 1vw;
-	font-size: 4vmin;
-}
-.project {
-	display:none;
-	width:90vw;
-	max-height:unset;
-	font-size: 3vmin;
-	padding-right: 5vw;
-	padding-left:5vw;
-	border-top:none;
-	border-bottom:none;
-	text-align:left;
-	padding-bottom: 2vh;
-}
-
-/* End Projects Section */
-
-.contactext{
-	font-size:4vmin;
-	width:90vw;
-	margin:auto;
-	border: .1vmin solid black;
-	padding: 2vmin;
-	text-align:center;
-	box-shadow: 1vw 1vh rgba(0, 0, 0, .7);
-}
-
-/* Begin About Me */
-.about-me{
-	max-height:unset;
-	text-align: 
-}
-.projectslist{
-	max-height: unset;
-}
-.myinfo{
-	padding:4vmin;
-	font-size:4vmin;
-	width: 45vmin; 
-	height: 70vmin;
-	border: .2vmin solid black;
-	box-shadow: 1vw 1vh rgba(0, 0, 0, .7);
-	color:black;
-	text-align:center;
-	position:absolute;
-	top:8vh;
-	right:36vw;
-
-}
-#me {
-	border-radius:2vmin; 
-	height: 50vmin; 
-	width: 40vmin; 
-	padding:1vmin;
-}
-#logo {
-	height:23vmin;
-	width: 23vmin;
-}
-.school {
-	padding:4vmin;
-	font-size:4vmin;
-	width: 45vmin; 
-	height: 70vmin;
-	border: .2vmin solid black;
-	box-shadow: 1vw 1vh rgba(0, 0, 0, .7);
-	color:black;
-	text-align:center;
-	float:left;
-	margin-left:5vw;
-	margin-right:5vw;
-}
-.interests {
-	padding:4vmin;
-	font-size:4vmin;
-	width: 45vmin; 
-	height: 70vmin;
-	border: .2vmin solid black;
-	box-shadow: 1vw 1vh rgba(0, 0, 0, .7);
-	color:black;
-	text-align:center;
-	float:right;
-	margin-left:5vw;
-	margin-right: 5vw;
-	
-}
-#computer{
-	display:block;
-}
-#mobile{
-	display:none;
-}
-
-#sailpic{
-	height: 30vmin;
-	width: 40vmin;
-	border-radius:2vmin;
-}
-.dummy{
-	height:100%;
-	width:100%;
-	display: none;
-}
-@media screen and (max-width: 700px)
-{
-	#computer{
-		display:none;
-	}
-	#mobile{
-		display:block;
-		position:static;
-		clear:both;
-		float:none;
-		margin-left:auto;
-		margin-right:auto;
-	}
-
-	.dummy{
-		display:block;
-	}
-
-
-}
-
-/* End About Me */
-
-
-	</style>
 <body>
 	<div class="color-bar" id="top">
 	<div class="color-section" style="background-color:#FF6F61"></div>
@@ -470,7 +74,7 @@ section{
 
 <div class="interests" id="computer">
 		<img src="sailing2.jpg" id="sailpic"> <br>
-	I enjoy sailing, skiing, running, soccer, playing the piano, cooking and baking. This picture is of me sailing on Mystic Lake in Boston!
+	I enjoy sailing, playing the piano, and baking. This picture is of me sailing on Mystic Lake in Boston!
 	</div>
 
 <!-- These divs get displayed if the window size too small -->
@@ -488,7 +92,7 @@ section{
 		<br>
 	<div class="interests" id="mobile">
 		<img src="sailing2.jpg" id="sailpic"> <br>
-	I enjoy sailing, skiing, running, soccer, playing the piano, cooking and baking. This picture is of me sailing on Mystic Lake in Boston!
+	I enjoy sailing, playing the piano, and baking. This picture is of me sailing on Mystic Lake in Boston!
 	</div>
 	<br>
 	</div>
@@ -507,8 +111,55 @@ section{
 	<div class="color-section" style="background-color:#DD4124"></div>
 	<div class="color-section" style="background-color:#98B4D4"></div>
 	</div>
-<section class="experience">
+<section class="experience" style="text-align: center;">
 	<div class="heading">Experience </div>
+	<EM style="font-size: 3vmin;"> Click on a job for more information. </EM>
+<div class="projectheadernohover">
+	<div class="projecttitle">Job Title</div>
+	<div class="projecttitle">Company</div>
+	<div class="projecttitle">Date</div>
+</div>
+<div class="projectheader" onclick="display_project('job1')">
+	<div class="projecttitle">Full-Stack Development Intern</div>
+	<div class="projecttitle">BMW Group</div>
+	<div class="projecttitle">Fall 2020</div>
+</div>
+<div class="project" id="job1">
+	<br>
+	Location: Munich, Germany
+	<br>
+	Tools Used: TypeScript (frontend), Java (backend)
+	<br>
+	<b> Tasks: </b>
+	<ul>
+		<li>Developed a company-internal software product for multi-project planning of vehicle projects
+</li>
+		<li>Built interactive, scenario-based data visualizations using the Highcharts library
+</li>
+		<li>Utilized Java (backend) for database interaction and TypeScript (frontend) to configure charts
+</li>
+	</ul>
+</div>
+<div class="projectheader" onclick="display_project('job2')">
+	<div class="projecttitle">Junior Sailing Instructor</div>
+	<div class="projecttitle">Coronado Yacht Club</div>
+	<div class="projecttitle">June-August: 2017-2019</div>
+</div>
+<div class="project" id="job2">
+	<br>
+	Location: San Diego, CA
+	<br>
+	<b> Description: </b>
+	<ul>
+		<li>Taught beginner, intermediate, and advanced sailing courses for children ages 8-18</li>
+		<li>Demonstrated proper safety techniques in the handling of sailboats and first aid</li>
+		<li>Listened to parents' concerns, kept them informed of childrens performances</li>
+		<li>Promoted to Youth Race Team Coach based on experience and dependability, prepared team for national championship	
+</li>
+	</ul>
+</div>
+<div class="projectheadernohover"></div>
+<br>
 	<div class="language-list">
 		
 		<div class="language"> MySQL </div>
@@ -516,45 +167,22 @@ section{
 		<div class="language"> C </div>
 		<div class="language"> C++ </div>
 		<div class="language"> Javascript </div>
-		<div class="language"> HTML </div>
-		<div class="language"> CSS </div>
-
+		<div class="language"> HTML/CSS </div>
+		<div class="language"> Java </div>
+		<div class="language"> TypeScript </div>
 	</div>
-	<div class="language_info"> 
-			I have the most experience in C/C++, which I use for most major projects. I have intermediate experience writing queries in MySQL and small programs in Python. 
-			I use Javascript, HTML and CSS for web applications. 
-		</div>
-		<br>
-	<div class="language-list">
+	<br>
+<div class="language-list">
 		<div class="language"> Microsoft Office </div>
-		<div class="language"> Excel </div>
 		<div class="language"> Linux Shell </div>
+		<div class="language"> MongoDB</div>
+		<div class="language"> Highcharts </div>
+		<div class="language"> Intel x86 Assembly</div>
 		<div class="language"> Fluent in German </div>
-	</div>
-	<div class="language_info">
-		I have experience using Linux Shell (ssh/bash), including shell scripting, SFTP as well as using vim/emacs/nano text editors. I am proficient in Microsoft Office (Powerpoint, Word, Outlook) and have intermediate experience using Excel.
 
-		I am also fluent in German, my second mother tongue. 
 	</div>
 	<br>
-	<div class="language-list" style="text-align: center; font-size:3vmin; padding-top: 2vh">
-		Work Experience
-	</div>
-	<div class="language_info">
-		Job Title: Junior Sailing Instructor <br>
-		Employer: Coronado Yacht Club/California Yacht Club <br>
-		Dates: June-August 2017-2019
-		<ul>
-			<li> Taught beginner, intermediate and advanced sailing courses for children/teenagers ages 8-18 </li>
-			<li> Demonstrated proper safety techniques in handling of sailboats and first aid</li>
-			<li> Dealt with parents concerns and kept them informed of child's performances </li>
-			<li> Promoted to Youth Race Team Coach based on experience and dependability, prepared team for National Championship</li>
-		</ul>
 
-
-		
-	</div>
-	<br>
 
 			<a href="#top" style="color: rgba(0,0,0,.4);"> <div class="backtop"> back to top</div> </a>
 </section>
@@ -578,7 +206,8 @@ section{
 		<ul style="list-style-type: none">
 			<li> Data Structures</li>
 			<li> Web Programming</li>
-			<li> Machine Structure & Assembly-Language Programming (Comp40)</li>
+			<li> Machine Structure & Assembly-Language Programming </li>
+			<li> Algorithms </li>
 
 		</ul>
 	</div>
@@ -588,12 +217,13 @@ section{
 		<ul style="list-style-type: none">
 			<li>Multivariable Calculus</li>
 			<li>Discrete Mathematics</li>
+			<li>Linear Algebra</li>
 		</ul>
 	</div>
 	<div class="course-list" id="other">
 		<h3> Other Courses </h3>
 		<ul style="list-style-type: none">
-		<li> Intro to Engineering - Renewable Energy</li>
+		<li> Renewable Energy</li>
 		<li> Engineering Management </li>
 		<li> Technical and Managerial Communications  </li>
 	</ul>
@@ -616,7 +246,7 @@ section{
 	<div class="heading"> Projects </div>
 	<EM style="font-size: 3vmin;"> Click on a project for more information. </EM>
 	<!-- header -->
-	<div class="projectheader"> <div class="projecttitle"> <STRONG> Course </STRONG> </div> 
+	<div class="projectheadernohover"> <div class="projecttitle"> <STRONG> Course </STRONG> </div> 
 	<div class="projecttitle"> <STRONG> Name </STRONG> </div> <div class="projecttitle"> <STRONG> Date </STRONG> </div> </div>
 	<!-- proj1 -->
 	<div class="projectheader" onclick="display_project('proj1')"> <div class="projecttitle"> Data Structures </div> 
@@ -624,8 +254,7 @@ section{
 	
 	<div class="project" id="proj1"> 
 		Language: C++ <br>
-		Data Structures Used: Trees, Hash Tables, Vectors, Linked Lists, Structs <br>
-		Object-Oriented: Yes
+		Data Structures Used: Trees, Hash Tables, Vectors, Linked Lists <br>
 		<h4> Description: </h4>
 		"Gerp" is a play on the Unix command "Grep", used to search for words in a files. Users could specify case-sensitive or case-insensitive searches <br>
 		<h4> Implementation </h4>
@@ -660,23 +289,6 @@ section{
 
 	</div>
 
-	<!-- Proj3 -->
-	<div class="projectheader" onclick="display_project('proj3')"> <div class="projecttitle"> Data Structures </div> 
-	<div class="projecttitle"> Sorting Algorithms </div> <div class="projecttitle"> Fall 2019 </div></div>
-
-	<div class="project" id="proj3"> 
-	Language: C++ <br>
-	Data Structures: Vectors, Structs
-	Object-Oriented: No
-	<h4> Description </h4>
-	Implemented Insertion Sort, QuickSort and Radix Sort Algorithms for a set of positive numbers read from a file. This project resulted in the following observations:
-	<ul>
-		<li> Insertion Sort is best for mostly-sorted lists, and slow on unsorted ones</li>
-		<li> QuickSort works well for any lists </li>
-		<li> Radix Sort is very quick for lists with numbers close in range. For example, it would be useful to sort test scores of students, because those numbers are all within the range 0 - 100 </li>
-	</ul>
-
-	 </div>
 
 	<!-- Proj4 -->
 	<div class="projectheader" onclick="display_project('proj4')"> <div class="projecttitle"> Comp40 </div> 
@@ -803,7 +415,7 @@ section{
 	Languages: Javascript, HTML, CSS 
 
 	<h4> Description </h4>
-	Created a website for a fictional company called "Johnson's Watches". The website includes a homepage, about us, catalogue, terms and conditions - all the things you would expect for a real company. 
+	Created a website for a fictional company called "Johnson's Watches". The website includes a homepage, about us, catalogue, terms and conditions.
 	<br>
 	<br>
 	<a href="https://ansgarjordan.github.io/Comp20-Midterm-Project/" target="_blank"><u style="color:blue">SEE THE WEBSITE HERE</u></a>
@@ -821,45 +433,11 @@ section{
 	NOTE: We did not actually implement this project, the purpose was simply to come up with a plan of how to. At the end of the semester, we presented to the Tufts Office of Sustainability. 
 	 </div>
 
-	<!-- Project 12 -->
-	<div class="projectheader" onclick="display_project('proj12')"> <div class="projecttitle"> Intro Computer Science </div> 
-	<div class="projecttitle">FishTank </div> <div class="projecttitle"> Spring 2019 </div></div>
-
-	<div class="project" id="proj12"> 
-	Language: C++ <br>
-	Data Structures: Structs, Arrays <br>
-	Object Oriented: Yes 
-	<h4> Description </h4>
-	The FishTank was a project to visualize Object-Oriented programming, by making distinct objects of "Fish" and the "FishTank", to which they were printed. The result was an ASCII-art animation that, at 5 frames per second, displayed the "Fish" objects swimming in the "FishTank".
-
-	<h4> Implementation </h4>
-	<ul> 
-		<li>Read the Fish Objects from a file, creating a new object for every Fish. </li>
-		<li>Initialize the FishTank, which is a large, 2-D array of empty space </li>
-		<li> Print the Fish Objects into the tank, display, move the fish, display again </li>
-		</ul>
-
-	</div>
-
-	<!-- Project 13 -->
-	<div class="projectheader" onclick="display_project('proj13')"> <div class="projecttitle"> Intro Computer Science </div> 
-	<div class="projecttitle">2048 </div>  <div class="projecttitle"> Spring 2019 </div></div>
-
-	<div class="project" id="proj13"> 
-	Language: C++ <br>
-	Data Structures: 2-Dimensional Arrays <br>
-	Object Oriented: No 
-	<h4> Description </h4>
-	Implented the game "2048" (see example of online game: 
-	<a href="https://play2048.co/" target="_blank"><u style="color:blue">2048</u></a>) This project utilized a variety of different modules to modify the gameboard and print it with every cycle. Users can play the game in the terminal using up, down, left and right arrows. After the game is over, the users score was displayed. 
-	<br>
-	<!-- Sample I/O: -->
 
 
-	</div>
 
 	<!-- Project 14 -->
-	<div class="projectheader"> </div>
+	<div class="projectheadernohover"></div>
 
 
 	<a href="#top" style="color: rgba(0,0,0,.4);"> <div class="backtop"> back to top</div> </a>
@@ -895,21 +473,26 @@ section{
 	<div class="color-section" style="background-color:#DD4124"></div>
 	<div class="color-section" style="background-color:#98B4D4"></div>
 	</div>
+<!-- This needs a different font -->
 <section class="contact">
 
 	<div class="heading">Contact</div>
-	<div class="contactext"> The best way to contact me is by
-	<a style="color:blue; text-decoration: underline;" href="mailto:ansgar.jordan@tufts.edu" title="mailto:ansgar.jordan@tufts.edu"> sending me an email. </a>
-	</div>
-	<br>
-	<div class="contactext"> Additionally, you can 
-	<a style="color:blue; text-decoration: underline;" href="https://www.linkedin.com/in/ansgarjordan/" title="linkedin.com/in/ansgarjordan/" target="_blank"> connect with me on LinkedIn. </a>
+	<div class="contactext"> 
+		<div class="language" style="font-size:5vmin">
+	<a style="color:blue; text-decoration: underline;" href="mailto:ansgar.jordan@tufts.edu" title="mailto:ansgar.jordan@tufts.edu"> Email Me</a>
+</div>
+<div class="language" style="font-size:5vmin">
+	<a style="color:blue; text-decoration: underline;" href="https://www.linkedin.com/in/ansgarjordan/" title="linkedin.com/in/ansgarjordan/" target="_blank"> LinkedIn. </a>
+</div>
+<div class="language" style="font-size:5vmin">
+	<a href="resume.pdf" target="_blank" style="color:blue; text-decoration: underline;" >View My Resume</a> 
+</div>
 </div>
 <br>
-<div class="contactext">
-	I am <EM>especially </EM> interested in the following topics: 
-	<ul style="text-align: left">
-		<li> Testing, especially test automation </li>
+<div class="contactext" style="text-align: left; display: block">
+ <u> Interests </u>
+	<ul>
+		<li> Test Automation </li>
 		<li> Data Analytics </li>
 		<li> Machine Learning/AI</li>
 	</ul>
